<resources>

    <!--Application Specific-->
    <string name="app_name">skillzapp</string>
    <string name="no_internet_message">No internet connection!</string>
    <string name="something_went_wrong_message">Oops! something went wrong. Please try again later.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <!--Bottom Navigation-->
    <string name="approval">Approval</string>
    <string name="settings">Settings</string>
    <string name="earnings">Earnings</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>

    <!--Welcome Activity-->
    <string name="select_user_type">Select User Type</string>
    <string name="select_user">Select User</string>
    <string name="enter_area_pin_code">Enter area Pin Code</string>
    <array name="usersArray">
        <item>@string/trainer</item>
        <item>@string/student</item>
    </array>
    <string name="trainer">Trainer</string>
    <string name="student">Student</string>
    <string name="login_message">Already have account? Login</string>

    <!--Select SubCategory Activity-->
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select SubCategory</string>
    <string name="students_details">Students Details</string>

    <string name="select_trainer">Select Trainer</string>
    <string name="search_here">Search here</string>
    <string name="category_not_found_message">Not in the list? Add here</string>
    <string name="add_new_entrollmet">Add New Enrollment</string>


    <!--Add SubCategory Fragment-->
    <string name="add_category">Add NewCategory</string>
    <string name="add_subcategory">Add SubCategory</string>
    <string name="subCategory">SubCategory</string>
    <string name="enter_subCategory">Enter SubCategory Name</string>
    <string name="add">Add</string>

    <!--Enter Details Activity-->
    <string name="coaching_details">Coaching Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="go"> -> </string>

    <!--Login Activity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!--Coaching Details Fragment-->
    <string name="coaching_type">Coaching Type</string>
    <string name="home">Home</string>
    <string name="institute">Institute</string>
    <string name="address">Address</string>
    <string name="charges">Charges</string>
    <string name="recurrence_type">Recurrence Type</string>
    <string name="daily">Daily</string>
    <string name="biweekly">Biweekly</string>
    <string name="weekly">Weekly</string>
    <string name="select_days">Select Days</string>
    <string name="upload_documents">Upload Documents</string>

    <!--Personal Details Fragment-->
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="highest_degree">Highest Degree</string>
    <string name="government_issued_id">Government Issued ID</string>
    <string name="address_proof">Address Proof</string>
    <string name="relevant_category_expertise_document">Relevant SubCategory Expertise Document</string>
    <string name="front">Front</string>
    <string name="back">Back</string>

    <!--Select Trainer Activity-->
    <string name="search_trainer">Search Trainer</string>

    <!--Student Details Activity-->
    <string name="enter_details">Enter Details</string>
    <string name="age">Age</string>
    <string name="standard">Standard</string>
    <string name="school_name">School Name</string>

    <!--Approval Fragment-->
    <string name="search_student">Search Student</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>

    <!--Earning Fragment-->
    <string name="pending_payments">Pending Payments</string>
    <string name="total_pending_payments">Total Pending Amount : Rs. </string>


    <!--Settings Fragment-->
    <string name="logout">Logout</string>
    <string name="logout_title">Logout Message</string>
    <string name="logout_message">Are you sure you want to logout?</string>

    <!--Validation Strings-->
    <string name="category_validation">Please write SubCategory name</string>
    <string name="paid">Paid</string>
    <string name="pending">Pending</string>
    <string name="not_paid">Not Paid</string>
    <string name="days">Days</string>

    <string name="attented">Attented</string>
    <string name="not_attented">Not Attented</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="otp_text">We have sent you access code Via SMS for mobile number verification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>