<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigationApproval"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/approval" />

    <item
        android:id="@+id/navigationEarnings"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/earnings" />

    <item android:id="@+id/navigationPayments"
        android:icon="@drawable/ic_baseline_payment_24"
         android:title="@string/payment"/>
    <item
        android:id="@+id/navigationSettings"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings" />




</menu>