<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".modules.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layoutBase"
            layout="@layout/layout_base" />

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="@dimen/size_90dp"
            android:layout_height="@dimen/size_90dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutBase"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textSelectUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_30dp"
            android:layout_marginTop="@dimen/size_30dp"
            android:text="@string/select_user_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appLogo" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinnerUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_30dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginEnd="@dimen/size_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSelectUserType"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/colorPrimaryDark"
            app:ms_arrowSize="16dp"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@android:color/holo_red_light"
            app:ms_floatingLabelColor="@color/colorPrimary"
            app:ms_floatingLabelText="Select Select Days"
            app:ms_highlightColor="@color/colorPrimary"
            app:ms_hint="@string/select_user"
            app:ms_hintColor="@color/colorPrimary"
            app:ms_multiline="false"
            app:ms_thickness="1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerUserType">

            <TextView
                android:id="@+id/textPinCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_30dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/enter_area_pin_code"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/size_20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/viewPinCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:textColor="@color/colorAccent"
                app:bar_active_color="@color/colorPrimaryDark"
                app:bar_height="@dimen/size_2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPinCode"
                app:length="6"
                app:otp_text_size="@dimen/size_25sp"
                app:width="@dimen/size_40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageAnimation"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="@dimen/size_200dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/textLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lady_guitar_player" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_15dp"
            android:text="@string/login_message"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size_18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>